--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,22 @@
-h1 {
-    color: red;
+.addEvent {
+    display: flex;
+    flex-direction: column;
+    /* border: solid 1px red; */
+    justify-content: space-between;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 1em;
+    margin: 1em;
 }
+.addEventBtn {
+    margin-top: .8em;
+    background-color: rgb(43, 188, 211);
+    border-radius: 5px;
+    border: solid rgb(200, 200, 200);
+    color: white;
+    font-size: 1em;
+    padding: 5px;
+}
+
 .modalBackground {
     width: 100vw;
     height: 100vh;
@@ -13,25 +29,25 @@ h1 {
 }
 
 .modalContainer {
-width: 500px;
-height: 500px;
-border-radius: 12px;
-background-color: white;
-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-display: flex;
-flex-direction: column;
-padding: 25px;
+    width: 500px;
+    height: 400x;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 25px;
 }
 
 .modalContainer .title {
-display: inline-block;
-text-align: center;
-margin-top: 10px;
+    display: inline-block;
+    text-align: center;
+    margin-top: 10px;
 }
 
 .titleCloseBtn {
-display: flex;
-justify-content: flex-end;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .titleCloseBtn button {
@@ -42,29 +58,40 @@ cursor: pointer;
 }
 
 .modalContainer .body {
-flex: 50%;
-display: flex;
-justify-content: center;
-align-items: center;
-font-size: 1.7rem;
-text-align: center;
+    flex: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.7rem;
 }
 
 .modalContainer .footer {
-flex: 20%;
-display: flex;
-justify-content: center;
-align-items: center;
+    flex: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.modalContainer .footer button {
-width: 150px;
-height: 45px;
-margin: 10px;
-border: none;
-background-color: cornflowerblue;
-color: white;
-border-radius: 8px;
-font-size: 20px;
-cursor: pointer;
+.footer button {
+    width: 150px;
+    height: 45px;
+    margin: 10px;
+    border: none;
+    color: white;
+    border-radius: 8px;
+    font-size: 20px;
+    cursor: pointer;
+    margin-top: 2em;
+}
+
+.updateBtn {
+    background-color: cornflowerblue;
+}
+
+.deleteBtn {
+    background-color: red;
+}
+
+label {
+    padding-right: .5em;
 }
