--- a/src/styles.css
+++ b/src/styles.css
@@ -95,3 +95,13 @@ cursor: pointer;
 label {
     padding-right: .5em;
 }
+
+.memberBios {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.bioForm {
+    width: 100%;
+}
