--- a/src/styles.css
+++ b/src/styles.css
@@ -103,6 +103,12 @@ label {
     align-items: center;
 }
 
+.videos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .bioForm {
     width: 100%;
 }
